Improve polynomial detection for simplification.

BUG: 217404
REVIEW: 101137